add gallery images and masory styling

--- a/gallery.html
+++ b/gallery.html
@@ -29,6 +29,17 @@
             </ul>
         </nav>
     </header>
+    <section id="photos">
+        <img src="assets/imges/athletes.jpg" alt="Two atheletes running together">
+        <img src="assets/imges/girls.jpg" alt="Three girls at charity paint running festival">
+        <img src="assets/imges/runner3.jpg" alt="Solo male runner jogging on a beach">
+        <img src="assets/imges/man.jpg" alt="Man at charity paint running festival">
+        <img src="assets/imges/runner1.jpg" alt="Solo female runner jogging through  phoenix park">
+        <img src="assets/imges/runner2.jpg" alt="Runnners competing in maraton">
+        <img src="assets/imges/runner4.jpg" alt="Solo female jogging on a beach">
+        <img src="assets/imges/running_gang.jpg" alt="large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/imges/mud-run.jpg" alt="Two woman runners taking a muddy selfie after the Mud Runners championship ">
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
